--- a/kasa-master/public/index.html
+++ b/kasa-master/public/index.html
@@ -2,22 +2,17 @@
 <html lang="fr">
 
 <head>
-	<meta charset="utf-8" />
-
+	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-	<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+	<link rel="icon" type="image/png" href="./favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-
+    <meta name="theme-color" content="#000000"/>
 	<title>Kasa</title>
 	<meta name="description" content="Kasa, meilleure agence de location d'appartements entre particuliers depuis près de 10 ans !" />
-	
-	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet"/>
 </head>
 
 <body>
-
 	<div id="root"></div>
 </body>
 
